# repo2env

./: .bumpversion.cfg  .pre-commit-config.yaml  README.md  setup.cfg
.github/workflows/: ci.yml  publish.yml
repo2env/: __init__.py  __main__.py  environment.py  fetch.py  git_util.py
