[metadata]
name = repo2env
version = 0.1.1

[options]
packages = find:
install_requires =
  click~=7.1
  dulwich~=0.20.15
  requests~=2.24

[options.extras_require]
dev = bump2version==1.0.1; pre-commit==2.12.1

[options.entry_points]
console_scripts =
    repo2env = repo2env.__main__:cli

[flake8]
# Adapted from: https://github.com/CasperWA/voila-optimade-client
ignore =
    E501  # Line length handled by black.
    W503  # Line break before binary operator, preferred formatting for black.
    E203  # Whitespace before ':', preferred formatting for black.


[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.cfg]
[bumpversion:file:repo2env/__init__.py]
